--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.3.5",
     "element-plus": "^2.3.3",
     "pinia": "^2.0.32",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "sass": "^1.62.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
